--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -31,4 +31,17 @@ jobs:
           pip install -r station_performance_pipeline/requirements.txt
           pylint station_performance_pipeline/*.py --ignore-patterns=test_ --fail-under=8.5
 
+            - name: Get changes to station_performance_pipeline
+        id: changed-station_performance_pipeline
+        uses: tj-actions/changed-files@v44
+        with:
+          files: |
+             station_performance_pipeline/**.py
+
+      - name: Run incidents linting if files changed
+        if: steps.changed-incidents.outputs.any_changed == 'true'
+        run: |
+          pip install -r incidents/requirements.txt
+          pylint incidents/*.py --ignore-patterns=test_ --fail-under=8.5
+
 
