--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -18,18 +18,18 @@ jobs:
       - name: Install pylint
         run: pip install pylint
 
-      - name: Get changes to station_performance_pipeline
-        id: changed-station_performance_pipeline
+      - name: Get changes to performance_pipeline
+        id: changed-performance_pipeline
         uses: tj-actions/changed-files@v44
         with:
           files: |
-             station_performance_pipeline/**.py
+             performance_pipeline/**.py
 
-      - name: Run station_performance_pipeline linting if files changed
-        if: steps.changed-station_performance_pipeline.outputs.any_changed == 'true'
+      - name: Run performance_pipeline linting if files changed
+        if: steps.changed-performance_pipeline.outputs.any_changed == 'true'
         run: |
-          pip install -r station_performance_pipeline/requirements.txt
-          pylint station_performance_pipeline/*.py --ignore-patterns=test_ --fail-under=8.5
+          pip install -r performance_pipeline/requirements.txt
+          pylint performance_pipeline/*.py --ignore-patterns=test_ --fail-under=8.5
 
             - name: Get changes to incidents
         id: changed-incidents
