--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 performance_pipeline/.idea/
+
+.DS_Store
+*.jpg
+*.html
+*.pdf
+*.csv
