added weekly report service page

--- a/dashboard/.streamlit/config.toml
+++ b/dashboard/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 base="dark"
-primaryColor = "#F8F8F8"
+primaryColor = "#212641"
 backgroundColor = "#16171B"
 secondaryBackgroundColor = "#212641"
 textColor = "#F8F8F8"
