--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -2,13 +2,16 @@ FROM python:latest
 
 WORKDIR /app
 
-COPY Home.py .
-COPY pages ./pages
-COPY data_access.py .
-COPY .streamlit/config.toml .streamlit/config.toml
-COPY charts.py .
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
+
+COPY Home.py .
+COPY pages ./pages
+COPY data_access.py .
+COPY subscribe.py .
+COPY .streamlit/config.toml .streamlit/config.toml
+COPY charts.py .
+COPY logo.png .
 
 CMD streamlit run Home.py
